--- a/Other_Reference.html
+++ b/Other_Reference.html
@@ -32,22 +32,6 @@
 		--web-view-id: Other_Reference;
 		--web-enable-deep-linking: true;
 	}
-	.Rectangle_99 {
-		position: absolute;
-		overflow: visible;
-		width: 248px;
-		height: 123px;
-		left: 64px;
-		top: 247px;
-	}
-	.Rectangle_100 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 397px;
-		left: 10px;
-		top: 378px;
-	}
 	#Hexlimits {
 		position: absolute;
 		top: 247px;
@@ -63,603 +47,6 @@
 		background-color: #FFFFFF;
 		left:50%;
 		margin-left:-124px;
-	}
-	.Rectangle_101 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 92px;
-	}
-	#REINFORCEMENTS {
-		position: absolute;
-		left: 111px;
-		top: 95px;
-		overflow: visible;
-		width: 152px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(255,255,255,1);
-	}
-	.Rectangle_102 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 116px;
-	}
-	#ROLL {
-		position: absolute;
-		left: 34px;
-		top: 120px;
-		overflow: visible;
-		width: 44px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#LARGE {
-		position: absolute;
-		left: 209px;
-		top: 120px;
-		overflow: visible;
-		width: 56px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#HUGE {
-		position: absolute;
-		left: 299px;
-		top: 120px;
-		overflow: visible;
-		width: 47px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#SMALL {
-		position: absolute;
-		left: 120px;
-		top: 120px;
-		overflow: visible;
-		width: 56px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	.Rectangle_103 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 140px;
-	}
-	#ID1 {
-		position: absolute;
-		left: 51px;
-		top: 145px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID6 {
-		position: absolute;
-		left: 143px;
-		top: 145px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID4 {
-		position: absolute;
-		left: 232px;
-		top: 145px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID2 {
-		position: absolute;
-		left: 317px;
-		top: 145px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	.Rectangle_104 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 164px;
-	}
-	.Rectangle_105 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 188px;
-	}
-	.Rectangle_106 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 25px;
-		left: 10px;
-		top: 211px;
-	}
-	#ID2_A1_Text_21 {
-		position: absolute;
-		left: 51px;
-		top: 167px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID4_A1_Text_22 {
-		position: absolute;
-		left: 143px;
-		top: 166px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID1_A1_Text_23 {
-		position: absolute;
-		left: 316px;
-		top: 166px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID2_A1_Text_24 {
-		position: absolute;
-		left: 232px;
-		top: 166px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID3 {
-		position: absolute;
-		left: 51px;
-		top: 190px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID2_A1_Text_26 {
-		position: absolute;
-		left: 143px;
-		top: 190px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID1_A1_Text_27 {
-		position: absolute;
-		left: 232px;
-		top: 190px;
-		overflow: visible;
-		width: 10px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#_ {
-		position: absolute;
-		left: 318px;
-		top: 190px;
-		overflow: visible;
-		width: 8px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#ID4_ {
-		position: absolute;
-		left: 47px;
-		top: 214px;
-		overflow: visible;
-		width: 19px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#__A1_Text_30 {
-		position: absolute;
-		left: 144px;
-		top: 214px;
-		overflow: visible;
-		width: 8px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#__A1_Text_31 {
-		position: absolute;
-		left: 233px;
-		top: 214px;
-		overflow: visible;
-		width: 8px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	#__A1_Text_32 {
-		position: absolute;
-		left: 317px;
-		top: 214px;
-		overflow: visible;
-		width: 8px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(0,0,0,1);
-	}
-	.Line_18 {
-		overflow: visible;
-		position: absolute;
-		top: 116.5px;
-		left: 275.5px;
-		width: 2px;
-		height: 120px;
-	}
-	.Line_19 {
-		overflow: visible;
-		position: absolute;
-		top: 116.5px;
-		left: 187.5px;
-		width: 2px;
-		height: 120px;
-	}
-	.Line_20 {
-		overflow: visible;
-		position: absolute;
-		top: 116.5px;
-		left: 98.5px;
-		width: 2px;
-		height: 120px;
-	}
-	.Rectangle_107 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 27px;
-		left: 10px;
-		top: 378px;
-	}
-	#ID3_small_hostiles_2_small___1 {
-		position: absolute;
-		left: 72px;
-		top: 268px;
-		overflow: visible;
-		width: 233px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	#EVENT_TABLE {
-		position: absolute;
-		left: 130px;
-		top: 380px;
-		overflow: visible;
-		width: 108px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 16px;
-		color: rgba(255,255,255,1);
-	}
-	.Rectangle_108 {
-		position: absolute;
-		overflow: visible;
-		width: 355px;
-		height: 19px;
-		left: 10px;
-		top: 404px;
-	}
-	#EVENT {
-		position: absolute;
-		left: 71px;
-		top: 405px;
-		overflow: visible;
-		width: 40px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 12px;
-		color: rgba(0,0,0,1);
-	}
-	#ROLL_A1_Text_36 {
-		position: absolute;
-		left: 20px;
-		top: 405px;
-		overflow: visible;
-		width: 33px;
-		white-space: nowrap;
-		text-align: left;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 12px;
-		color: rgba(0,0,0,1);
-	}
-	#All_is_Dust__If_any_discovery_ {
-		position: absolute;
-		left: 71px;
-		top: 426px;
-		overflow: hidden;
-		width: 288px;
-		height: 349px;
-		text-align: left;
-		font-family: Helvetica Neue;
-		line-height: 11px;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 9.5px;
-		color: rgba(0,0,0,1);
-	}
-	#ID1__2_3__ {
-		position: absolute;
-		left: 14px;
-		top: 435px;
-		overflow: hidden;
-		width: 39px;
-		height: 58px;
-		line-height: 17px;
-		margin-top: -1.5px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	#ID4_6 {
-		position: absolute;
-		left: 14px;
-		top: 508px;
-		overflow: hidden;
-		width: 39px;
-		height: 27px;
-		line-height: 17px;
-		margin-top: -1.5px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	#ID7_10___11_14 {
-		position: absolute;
-		left: 14px;
-		top: 550px;
-		overflow: hidden;
-		width: 39px;
-		height: 77px;
-		line-height: 17px;
-		margin-top: -1.5px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	#ID15_17___18_19 {
-		position: absolute;
-		left: 14px;
-		top: 649px;
-		overflow: hidden;
-		width: 39px;
-		height: 75px;
-		line-height: 17px;
-		margin-top: -1.5px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	#ID20 {
-		position: absolute;
-		left: 14px;
-		top: 747px;
-		overflow: hidden;
-		width: 39px;
-		height: 21px;
-		line-height: 17px;
-		margin-top: -1.5px;
-		text-align: center;
-		font-family: Helvetica Neue;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 14px;
-		color: rgba(0,0,0,1);
-	}
-	.Line_21 {
-		overflow: visible;
-		position: absolute;
-		top: 464.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_22 {
-		overflow: visible;
-		position: absolute;
-		top: 498.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_23 {
-		overflow: visible;
-		position: absolute;
-		top: 542.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_24 {
-		overflow: visible;
-		position: absolute;
-		top: 576.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_25 {
-		overflow: visible;
-		position: absolute;
-		top: 642.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_26 {
-		overflow: visible;
-		position: absolute;
-		top: 675.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_27 {
-		overflow: visible;
-		position: absolute;
-		top: 739.5px;
-		left: 10.5px;
-		width: 355px;
-		height: 1px;
-	}
-	.Line_28 {
-		overflow: visible;
-		position: absolute;
-		top: 401.5px;
-		left: 61.5px;
-		width: 1px;
-		height: 374px;
 	}
 	.Rectangle_11 {
 		position: absolute;
@@ -683,14 +70,6 @@
 		font-size: 20px;
 		color: rgba(255,255,255,1);
 	}
-	#Group_796 {
-		position: absolute;
-		width: 48px;
-		height: 63px;
-		left: 0px;
-		top: 25px;
-		overflow: visible;
-	}
 	table {
 		width:355px;
 		height:397px;
@@ -699,7 +78,7 @@
 		font-size: 10px;
 		position:absolute;
 		left:10px;
-		top:370px;
+		top:368px;
 	}
 	table, th, td {
   		border: 1px solid rgba(112,112,112,1);
@@ -737,111 +116,76 @@
 		overflow: visible;
 		white-space: nowrap;
 	}
+	.ReTable {
+		position: absolute;
+		width: 355px;
+		height: 50px;
+		top: 92px;
+		left: 10px;
+		z-index: 1;
+		font-family: Helvetica Neue;
+		font-weight: bold;
+		border-collapse: collapse;
+		border: 1px solid rgba (112,112,112,1);
+		font-size: 14.5px;
+		padding: 3px
+	}
+	.ReTable tr:nth-child(even) {
+		background-color: rgba(229,226,235,1);
+	}
+	.ReTable tr:nth-child(odd) {
+		background-color: rgba(215,210,230,1);
+	}
+	.ReTable td {
+		text-align: center;
+	}
+	.ReTable caption {
+		background-color: black;
+		color: white;
+	}
+	.ReTable th {
+		background-color: rgba(187,186,190,1);
+		font-size: 13px;
+	}
 </style>
 </head>
 <body>
 <div id="Other_Reference">
-	<svg class="Rectangle_101">
-		<rect fill="rgba(0,0,0,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_101" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<div id="REINFORCEMENTS">
-		<span>REINFORCEMENTS</span>
-	</div>
-	<svg class="Rectangle_102">
-		<rect fill="rgba(187,186,190,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_102" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<div id="ROLL">
-		<span>ROLL</span>
-	</div>
-	<div id="LARGE">
-		<span>LARGE</span>
-	</div>
-	<div id="HUGE">
-		<span>HUGE</span>
-	</div>
-	<div id="SMALL">
-		<span>SMALL</span>
-	</div>
-	<svg class="Rectangle_103">
-		<rect fill="rgba(229,226,235,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_103" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<div id="ID1">
-		<span>1</span>
-	</div>
-	<div id="ID6">
-		<span>6</span>
-	</div>
-	<div id="ID4">
-		<span>4</span>
-	</div>
-	<div id="ID2">
-		<span>2</span>
-	</div>
-	<svg class="Rectangle_104">
-		<rect fill="rgba(215,210,230,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_104" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<svg class="Rectangle_105">
-		<rect fill="rgba(229,226,235,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_105" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<svg class="Rectangle_106">
-		<rect fill="rgba(215,210,230,1)" stroke="rgba(112,112,112,1)" stroke-width="1px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Rectangle_106" rx="0" ry="0" x="0" y="0" width="355" height="25">
-		</rect>
-	</svg>
-	<div id="ID2_A1_Text_21">
-		<span>2</span>
-	</div>
-	<div id="ID4_A1_Text_22">
-		<span>4</span>
-	</div>
-	<div id="ID1_A1_Text_23">
-		<span>1</span>
-	</div>
-	<div id="ID2_A1_Text_24">
-		<span>2</span>
-	</div>
-	<div id="ID3">
-		<span>3</span>
-	</div>
-	<div id="ID2_A1_Text_26">
-		<span>2</span>
-	</div>
-	<div id="ID1_A1_Text_27">
-		<span>1</span>
-	</div>
-	<div id="_">
-		<span>-</span>
-	</div>
-	<div id="ID4_">
-		<span>4+</span>
-	</div>
-	<div id="__A1_Text_30">
-		<span>-</span>
-	</div>
-	<div id="__A1_Text_31">
-		<span>-</span>
-	</div>
-	<div id="__A1_Text_32">
-		<span>-</span>
-	</div>
-	<svg class="Line_18">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="2px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_18" d="M 0 120 L 0 0">
-		</path>
-	</svg>
-	<svg class="Line_19">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="2px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_19" d="M 0 120 L 0 0">
-		</path>
-	</svg>
-	<svg class="Line_20">
-		<path fill="transparent" stroke="rgba(112,112,112,1)" stroke-width="2px" stroke-linejoin="miter" stroke-linecap="butt" stroke-miterlimit="4" shape-rendering="auto" id="Line_20" d="M 0 120 L 0 0">
-		</path>
-	</svg>
-	<div id="Hexlimits">
-		<p style="text-align:center;margin:0;"><b>HEX LIMITS</b></p><span style="padding-left:5px;">3 <b>small</b> hostiles</span><br><span style="padding-left:5px;">2 <b>small</b> & 1 <b>large</b> hostile</span><br><span style="padding-left:5px;">2 <b>large</b> hostiles</span><br><span style="padding-left:5px;">1 <b>huge</b> hostile</span><br><span style="padding-left:5px;">Both <b>Ratling Twins</b> & 1 other <b>explorer</b></span><br><span style="padding-left:5px;">2 <b>explorers</b></span>
+
+<table id:"ReTable" class="ReTable">
+	<caption>REINFORCEMENTS</caption>
+	<tr>
+		<th>ROLL</th>
+		<th>SMALL</th>
+		<th>LARGE</th>
+		<th>HUGE</th>
+	</tr>
+	<tr>
+		<td>1</td>
+		<td>6</td>
+		<td>4</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>2</td>
+		<td>4</td>
+		<td>2</td>
+		<td>1</td>
+	</tr>
+	<tr>
+		<td>3</td>
+		<td>2</td>
+		<td>1</td>
+		<td>-</td>
+	</tr>
+	<tr>
+		<td>4+</td>
+		<td colspan="3">-</td>
+	</tr>
+	</table>
+	
+<div id="Hexlimits">
+    <p style="text-align:center;margin:0;"><b>HEX LIMITS</b></p><span style="padding-left:5px;">3 <b>small</b> hostiles</span><br><span style="padding-left:5px;">2 <b>small</b> & 1 <b>large</b> hostile</span><br><span style="padding-left:5px;">2 <b>large</b> hostiles</span><br><span style="padding-left:5px;">1 <b>huge</b> hostile</span><br><span style="padding-left:5px;">Both <b>Ratling Twins</b> & 1 other <b>explorer</b></span><br><span style="padding-left:5px;">2 <b>explorers</b></span>
 </div>
 	<svg class="Rectangle_11">
 		<rect fill="rgba(0,0,0,1)" id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="375" height="88">
